Website overflow fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,15 +1,16 @@
-//? Sass code by Harold.
+//* Sass code by Harold.
+
+//? Imports
 @import "stylings/defaults";
 
-/*? Main */
-
+//? Main
 html {
   height: 100%;
   scroll-behavior: smooth;
   width: 100%;
   padding: 0%;
 
-  overflow-y: hidden;
+  // overflow-y: hidden;
   background-color: $background;
 }
 
@@ -55,7 +56,6 @@ body {
 // ? Navigation Bar
 .navContainer {
   width: 100%;
-  padding-bottom: 50em;
 
   .navTexts {
     width: 100%;
